MDCSSWorkingProject/GpMessages/141502287919700
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Tuesday, December 5, 2023 6:45:04 PM</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    [STATUS]=A
            ^
SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Tuesday, December 5, 2023 6:45:04 PM (Elapsed Time: 0.06 seconds)</msg></messages>